add namespace to application config yaml

--- a/application/blogger_migration_job.yaml
+++ b/application/blogger_migration_job.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: blogger-api-migrate
+  namespace: content
   labels:
     app.kubernetes.io/name: blogger-api-migrate
 spec:
