--- a/tsb/ingress.yaml
+++ b/tsb/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: install.tetrate.io/v1alpha1
 kind: IngressGateway
 metadata:
   name: tsb-gateway-blogger
-  namespace: marketing
+  namespace: content
 spec:
   kubeSpec:
     service:
