--- a/tsb/conf.yaml
+++ b/tsb/conf.yaml
@@ -116,6 +116,9 @@ spec:
     - name: v1
       labels:
         version: v1
+    - name: v2
+      labels:
+        version: v2
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -139,3 +142,8 @@ spec:
         - destination:
             host: blogger.content.svc.cluster.local
             subset: v1
+          weight: 100
+        - destination::
+            host: blogger.content.svc.cluster.local
+            subset: v2
+          weight: 0
