modify deployment name for primary and canary

--- a/application/blogger_deployment_v1.yaml
+++ b/application/blogger_deployment_v1.yaml
@@ -5,7 +5,7 @@ metadata:
     app: blogger-api
     process: web
     version: v1
-  name: blogger-api-web
+  name: blogger-api-web-v1
   namespace: content
 spec:
   replicas: 1
