--- a/tsb/conf.yaml
+++ b/tsb/conf.yaml
@@ -143,7 +143,7 @@ spec:
             host: blogger.content.svc.cluster.local
             subset: v1
           weight: 100
-        - destination::
+        - destination:
             host: blogger.content.svc.cluster.local
             subset: v2
           weight: 0
