modify rollout object

--- a/rollout/rollout.yaml
+++ b/rollout/rollout.yaml
@@ -3,6 +3,22 @@ kind: Rollout
 metadata:
   name: rollout-example
 spec:
+  replicas: 5
+  revisionHistoryLimit: 2
+  selector:
+    matchLabels:
+      app: rollout-example
+  template:
+    metadata:
+      labels:
+        app: rollout-example
+    spec:
+      containers:
+      - name: rollouts-demo
+        image: argoproj/rollouts-demo:blue
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
   strategy:
     canary:
       trafficRouting:
