--- a/tsb/conf.yaml
+++ b/tsb/conf.yaml
@@ -113,12 +113,12 @@ metadata:
 spec:
   host: blogger.content.svc.cluster.local
   subsets:
-    - name: v1
+    - name: stable
       labels:
-        version: v1
-    - name: v2
+        app: rollout-example
+    - name: canary
       labels:
-        version: v2
+        version: rollout-example
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -140,10 +140,10 @@ spec:
   http:
     - route:
         - destination:
-            host: blogger.content.svc.cluster.local
-            subset: v1
+            host: rollout-example
+            subset: stable
           weight: 100
         - destination:
-            host: blogger.content.svc.cluster.local
-            subset: v2
+            host: rollout-example
+            subset: canary
           weight: 0
