--- a/tsb/conf.yaml
+++ b/tsb/conf.yaml
@@ -126,6 +126,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: blogger-vs
+  displayName: blogger-virtualservice
   namespace: content
   labels:
     istio.io/rev: tsb
