--- a/tsb/conf.yaml
+++ b/tsb/conf.yaml
@@ -96,7 +96,7 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - blogger-test.tetrate.com
+    - blogger.tetrate.com
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
@@ -126,7 +126,6 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: blogger-vs
-  displayName: blogger-virtualservice
   namespace: content
   labels:
     istio.io/rev: tsb
@@ -137,7 +136,7 @@ metadata:
     tsb.tetrate.io/gatewayGroup: blogger-gateway
 spec:
   hosts:
-    - "blogger-test.tetrate.com"
+    - "blogger.tetrate.com"
   gateways:
     -  blogger-gateway
   http:
